Added user dropdown menu for logout

--- a/src/app/components/principal/principal.component.scss
+++ b/src/app/components/principal/principal.component.scss
@@ -3,3 +3,11 @@
     background-color: #b99d6b;
     margin-bottom: 30px;
 }
+
+.pointer {cursor: pointer;}
+
+.right{
+    div{
+        left: -104px !important;
+    }
+}
