--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -8,6 +8,14 @@
             <a class="dropdown-item" [routerLink]="''">Login</a>
         </div>
     </div>
+    <div class="dropdown right">
+        <a class="pointer" id="dropdownMenuButton" data-toggle="dropdown">{{user.first_name || 'Not An User'}}</a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item pointer" (click)="logOut()">Log Out</a>
+            <a class="dropdown-item" [routerLink]="'pageOne'">Account settings</a>
+            <a class="dropdown-item" [routerLink]="'pageTwo'">My Ships</a>
+        </div>
+    </div>
 </nav>
 
 <router-outlet></router-outlet>
